--- a/my.html
+++ b/my.html
@@ -19,6 +19,6 @@
 </head>
 
 <body>
-    <a class="custom-button" href="itms-services://?action=download-manifest&url=https://github.com/imad-project/imadTest/raw/master/IMAD_Project.ipa">아이매드 다운 ㄱㄱ</a>
+    <a class="custom-button" href="itms-services://?action=download-manifest&url=https://github.com/QuaRang1225/imadTest/blob/04472b2a5c944dee03623565e71301046255f7d1/manifest.plist">아이매드 다운 ㄱㄱ</a>
 </body>
 </html>
