--- a/my.html
+++ b/my.html
@@ -19,6 +19,6 @@
 </head>
 
 <body>
-    <a class="custom-button" href="itms-services://?action=download-manifest&url=https://github.com/imad-project/imadTest/blob/master/my.html">아이매드 다운 ㄱㄱ</a>
+    <a class="custom-button" href="itms-services://?action=download-manifest&url=https://github.com/imad-project/imadTest/blob/master/manifest.plist">아이매드 다운 ㄱㄱ</a>
 </body>
 </html>
